# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.339 2005/10/06 15:50:02 wolf31o2 Exp $

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/livecd-stage2_template.spec:
  Removed livecd/runscript and livecd/archscript from livecd-stage2 example
  spec template and updating version stamp.

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py:
  allow file_check to proceed if key is not in use

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_lock.py:
  Recursively make the missing directories

  05 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  Fix extract_modules to just echo a warning that it is missing

  30 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf:
  Updating default configuration for catalyst and updating version stamp,
  since we're beginning internal testing for release.

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix bug 106004 split strings into a list for empty and rm operation

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Append slashes to directories so rsyncs work properly

  13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Changing source_subpath for livecd-stage2 example for bug #101704.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec, modules/livecd_stage2_target.py,
  targets/support/livecdfs-update.sh:
  Added livecd/xdm and livecd/xsession options. These are used to setup the
  default display manager and X session, respectively. Added supporting
  documentation to example spec files. Imported more work from my fsscript for
  the official LiveCD.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py: